Updated gradle config to gradle:3.0.1; updated target java version to 1.8; updated butterknife library dependencies for sample application; added global ext variable for support library version; updated support libraries for sample application; enabled multiDex support; general support for Android Studio 3.0+

--- a/android-iconify-sample/build.gradle
+++ b/android-iconify-sample/build.gradle
@@ -16,10 +16,11 @@ android {
 
     defaultConfig {
         applicationId "com.joanzapata.android.icons.sample"
-        minSdkVersion 8
+        minSdkVersion 14
         targetSdkVersion rootProject.ext.compileSdkVersion
         versionCode VERSION_CODE.toInteger()
         versionName VERSION_NAME
+        multiDexEnabled true
     }
 
     def password = project.hasProperty('ICONIFY_SAMPLE_KEYSTORE_PASSWORD') ?
@@ -34,8 +35,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_6
-        targetCompatibility JavaVersion.VERSION_1_6
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     buildTypes {
@@ -47,10 +48,13 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:22.2.1'
-    compile 'com.android.support:recyclerview-v7:22.2.1'
-    compile 'com.android.support:design:22.2.1'
-    compile 'com.jakewharton:butterknife:7.0.1'
+    compile "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
+    compile "com.android.support:recyclerview-v7:$rootProject.ext.supportLibraryVersion"
+    compile "com.android.support:design:$rootProject.ext.supportLibraryVersion"
+
+    // butterknife stuff
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     compile project(':android-iconify-fontawesome')
     compile project(':android-iconify-typicons')
