--- a/android-iconify/build.gradle
+++ b/android-iconify/build.gradle
@@ -16,13 +16,13 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_6
-        targetCompatibility JavaVersion.VERSION_1_6
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:22.2.1'
+    compile "com.android.support:support-v4:$rootProject.ext.supportLibraryVersion"
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
