--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,14 @@
+allprojects {
+    repositories {
+        google()
+    }
+}
+
 subprojects {
     buildscript {
         repositories {
             jcenter()
+            google()
         }
     }
 
@@ -11,8 +18,9 @@ subprojects {
 }
 
 ext {
-    androidPlugin = 'com.android.tools.build:gradle:1.3.0'
-    minSdkVersion = 4
-    compileSdkVersion = 22
-    buildToolsVersion = '23.0.1'
+    androidPlugin = 'com.android.tools.build:gradle:3.0.1'
+    supportLibraryVersion = '27.0.2'
+    minSdkVersion = 14
+    compileSdkVersion = 27
+    buildToolsVersion = '27.0.3'
 }
