--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,17 @@
-GROUP=com.joanzapata.iconify
-VERSION_NAME=2.2.2
-VERSION_CODE=20202
+GROUP=com.blackboardtheory
+VERSION_NAME=3.0.1-SNAPSHOT
+VERSION_CODE=30301
+POM_NAME=Iconify
+POM_ARTIFACT_ID=joanzapata.iconify
+POM_PACKAGING=aar
 POM_DESCRIPTION=Evolutive integration of popular icon fonts for Android
 
-POM_URL=https://github.com/JoanZapata/android-iconify/
-POM_SCM_URL=https://github.com/JoanZapata/android-iconify/
-POM_SCM_CONNECTION=scm:git:git://github.com/JoanZapata/android-iconify/.git
-POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/JoanZapata/android-iconify/.git
+POM_URL=https://github.com/bdevereaux/android-iconify/
+POM_SCM_URL=https://github.com/bdevereaux/android-iconify/
+POM_SCM_CONNECTION=scm:git:git://github.com/bdevereaux/android-iconify/.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/bdevereaux/android-iconify/.git
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
-POM_DEVELOPER_ID=JoanZapata
-POM_DEVELOPER_NAME=Joan Zapata
+POM_DEVELOPER_ID=bdevereaux
+POM_DEVELOPER_NAME=Brandon Devereaux
