Removed deprecated gradle compile targets in favor of implementation targets; updated gradle wrapper version; using Android Studio 3.2.0-rc02 gradle plugin

--- a/android-iconify-entypo/build.gradle
+++ b/android-iconify-entypo/build.gradle
@@ -21,7 +21,7 @@ android {
 }
 
 dependencies {
-    compile project(':android-iconify')
+    implementation project(':android-iconify')
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
