--- a/android-iconify-sample/build.gradle
+++ b/android-iconify-sample/build.gradle
@@ -48,23 +48,23 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
-    compile "com.android.support:recyclerview-v7:$rootProject.ext.supportLibraryVersion"
-    compile "com.android.support:design:$rootProject.ext.supportLibraryVersion"
+    implementation "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
+    implementation "com.android.support:recyclerview-v7:$rootProject.ext.supportLibraryVersion"
+    implementation "com.android.support:design:$rootProject.ext.supportLibraryVersion"
 
     // butterknife stuff
-    compile 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
-    compile project(':android-iconify-fontawesome')
-    compile project(':android-iconify-typicons')
-    compile project(':android-iconify-ionicons')
-    compile project(':android-iconify-entypo')
-    compile project(':android-iconify-material')
-    compile project(':android-iconify-material-community')
-    compile project(':android-iconify-meteocons')
-    compile project(':android-iconify-weathericons')
-    compile project(':android-iconify-simplelineicons')
+    implementation project(':android-iconify-fontawesome')
+    implementation project(':android-iconify-typicons')
+    implementation project(':android-iconify-ionicons')
+    implementation project(':android-iconify-entypo')
+    implementation project(':android-iconify-material')
+    implementation project(':android-iconify-material-community')
+    implementation project(':android-iconify-meteocons')
+    implementation project(':android-iconify-weathericons')
+    implementation project(':android-iconify-simplelineicons')
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
