--- a/android-iconify-sample/build.gradle
+++ b/android-iconify-sample/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
+    implementation project(':android-iconify')
     implementation project(':android-iconify-fontawesome')
     implementation project(':android-iconify-typicons')
     implementation project(':android-iconify-ionicons')
